# margarita-open-agent

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
src/margarita_open_agent/: container.py  session.py  session_event.py
src/margarita_open_agent/core/: interfaces.py  llm.py
src/margarita_open_agent/core/models/: errors.py  llm_model_enum.py  message.py  permissions.py  session.py  stream_event.py  tool.py  tool_call_event.py
src/margarita_open_agent/core/sessions/: session.py
src/margarita_open_agent/libs/ollama/: client.py  ollama.py
src/margarita_open_agent/libs/openai/: client.py  openai_llm_client.py
src/margarita_open_agent/libs/permissions/: handler.py
src/margarita_open_agent/libs/tools/: ask_user.py  code_search.py  command_runner.py  custom_handler.py  file_find.py  file_read.py  file_write.py  registry.py
src/margarita_open_agent/libs/user_input/: handler.py
tests/integration/: test_run_agent.py
tests/unit/libs/tools/: test_ask_user.py  test_code_search.py  test_command_runner.py  test_file_find.py  test_file_read.py  test_file_write.py
