[project]
name = "margarita-open-agent"
version = "0.1.4rc1"
description = "Open Agent for the Margarita Agent Framework"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "openai>=2.34.0",
    "wireup>=2.9.0",
]

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings-python>=2.0.1",
    "pygments>=2.19.2",
    "pyinstaller>=6.18.0",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.3",
    "ruff>=0.14.13",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margarita_open_agent"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running Ollama instance",
]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-m", "not integration",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

